# bandcamptui

./: Dockerfile  LICENSE  Makefile  README.md  pyproject.toml  setup.py
.github/workflows/: docker.yml
bandcamptui/: __init__.py  app.py  formats.py  helpers.py
tests/: test_helpers.py
